k8s/postgres-master.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-master
spec:
  serviceName: "postgres-master"
  replicas: 1
  selector:
    matchLabels:
      app: postgres-master
  template:
    metadata:
      labels:
        app: postgres-master
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-master-data
  volumeClaimTemplates:
    - metadata:
        name: postgres-master-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-master
spec:
  ports:
    - port: 5432
  selector:
    app: postgres-master
